changed the get query to post for the algorithms and changed the node version in docker file
