# algorithms/ollie/api/swagger/swagger.yaml
@@ -17,7 +17,7 @@ produces:
 - "application/json"
 paths:
   /getRelationships:
-    get:
+    post:
       security:
       - basicAuth: []
       tags:
@@ -27,7 +27,7 @@ paths:
         \ in the text by running ollie algorithm on it. The response includes the\
         \ sentence and the instances which contains detail about each instance of\
         \ relationship found. \n"
-      operationId: "getRelationshipsGET"
+      operationId: "getRelationshipsPOST"
       parameters:
       - name: "inputTextArray"
         in: "query"
